Changed positioning of intro splash to fixed so that it always blocks the screen perfectly. Removed a transform css property inlined into the WSIT img that I had to rectify a weird sizing issue. Removing it has no negative impact from what I can see on desktop and mobile, and also for some reason it seems to have been causing the img to draw on top of the intro splash screen and be visible, as if it had z-index: 99

--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body {
 }
 
 #intro-screen {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
